Projet total/Assembleur/tests/bad/testfile-bad-sw.ms
    .section text
sw %rax %rbx